Fix name wrapping

--- a/css/shoppingcart.css
+++ b/css/shoppingcart.css
@@ -384,7 +384,6 @@
 
 .shopping-cart .single-product .top-section .product-name-heading {
   display:inline-block; 
-  height: 40px;
   line-height: 40px;
 } 
 
